--- a/src/Switch.less
+++ b/src/Switch.less
@@ -14,6 +14,7 @@
   position: relative;
   display: inline-block;
   box-sizing: border-box;
+  overflow: hidden;
   width: 64px;
   height: 24px;
   line-height: 22px;
