--- a/demo/SwitchDemo.less
+++ b/demo/SwitchDemo.less
@@ -8,3 +8,8 @@
 
 @import "../node_modules/kuma-base/theme/orange";
 @import "../src/Switch.less";
+
+h2 {
+  margin-top: 10px;
+  margin-bottom: 5px;
+}
