--- a/src/Switch.less
+++ b/src/Switch.less
@@ -63,7 +63,7 @@
   }
   &-disabled {
     cursor: no-drop;
-    background: @bg-disabled-color;
+    background: @normal-alpha-8;
     .@{__switch-prefix-cls}-inner {
       color: @text-disabled-color;
     }
