--- a/src/Switch.less
+++ b/src/Switch.less
@@ -75,6 +75,15 @@
       transform: scale(1);
       animation-name: none;
     }
+    &.@{__switch-prefix-cls}-checked {
+      background: @brand-primary-alpha-4;
+      .@{__switch-prefix-cls}-inner {
+        color: white;
+      }
+      &:after {
+        background: white;
+      }
+    }
   }
   &-label {
     display: inline-block;
@@ -90,10 +99,10 @@
     &:before {
       content: "\e6b6";
       font-family: uxcore!important;
-      font-size: 14px;
+      font-size: 12px;
       font-style: normal;
       position: absolute;
-      left: 5px;
+      left: 6px;
       top: 0px;
       z-index: 2;
       color: @normal-alpha-3;
@@ -103,7 +112,7 @@
     &.@{__switch-prefix-cls}-checked {
       &:before {
         color: @brand-primary;
-        left: 44px;
+        left: 45px;
       }
     }
   }
@@ -114,7 +123,7 @@
         left: 18px;
       }
       &:before {
-        left: 20px;
+        left: 21px;
       }
     }
   }
