Remove code that caused warning.

--- a/src/Switch.less
+++ b/src/Switch.less
@@ -103,7 +103,7 @@
       font-style: normal;
       position: absolute;
       left: 6px;
-      top: 0px;
+      top: 0;
       z-index: 2;
       color: @normal-alpha-3;
       transition: left @duration cubic-bezier(0.35, 0, 0.25, 1);
